finals/css/style.css
body {
  padding: 0;
  margin: 0;
}

html, body, #map {
  height: 100%;
  width: 100vw;
  position: absolute;
  top: 0;
  bottom: 0;
}
.filter-group {
font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
font-weight: 600;
position: absolute;
top: 10px;
right: 10px;
z-index: 1;
border-radius: 3px;
width: 120px;
color: #fff;
}

.filter-group input[type='checkbox']:first-child + label {
border-radius: 3px 3px 0 0;
}

.filter-group label:last-child {
border-radius: 0 0 3px 3px;
border: none;
}

.filter-group input[type='checkbox'] {
display: none;
}

.filter-group input[type='checkbox'] + label {
background-color: #3386c0;
display: block;
cursor: pointer;
padding: 10px;
border-bottom: 1px solid rgba(0, 0, 0, 0.25);
}

.filter-group input[type='checkbox'] + label {
background-color: #3386c0;
text-transform: capitalize;
}

.filter-group input[type='checkbox'] + label:hover,
.filter-group input[type='checkbox']:checked + label {
background-color: #4ea0da;
}

.filter-group input[type='checkbox']:checked + label:before {
content: '✔';
margin-right: 5px;
}

iframe {
border: none;
/* overflow: hidden; */
/* margin-top: -14675px; */
/* height: 15200px; */
/* margin-top: -10%; */
height: 100vh;
width:100%;
}

